--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -374,3 +374,38 @@ label {
     font-size: 0.9rem;
     color: #374151;
 }
+
+/* Material Symbols alapbeállítások */
+.material-symbols-rounded {
+    font-variation-settings: 'FILL' 0, 'wght' 500, 'GRAD' 0, 'opsz' 24;
+    line-height: 1;
+    vertical-align: middle;
+}
+.material-symbols-rounded.filled {
+    font-variation-settings: 'FILL' 1, 'wght' 600, 'GRAD' 0, 'opsz' 24;
+}
+
+/* Gombok ikonokkal: ikon + szöveg rendezése */
+button.with-icon {
+    display: inline-flex;
+    align-items: center;
+    gap: 0.35rem;
+}
+
+/* Meta sorban használt apró ikonok */
+.meta-icon {
+    font-size: 1.05rem;
+    margin-right: 0.25rem;
+    vertical-align: -2px;
+}
+
+/* Kedvenc csillag ikon stílusai */
+.icon-button.favorite .material-symbols-rounded {
+    font-size: 1.25rem;
+}
+.icon-button.favorite.active {
+    color: #f97316;
+}
+.icon-button.favorite.detail .material-symbols-rounded {
+    font-size: 1.35rem;
+}
